[gd_scene load_steps=33 format=3 uid="uid://dy6wmog2cla22"]

[ext_resource type="Script" path="res://Animation/Background/ParallaxBackground.gd" id="1_cvn7a"]
[ext_resource type="Script" path="res://Animation/Animation.gd" id="1_pqcsg"]
[ext_resource type="Texture2D" uid="uid://dn2f7wl4kqanq" path="res://Animation/Background/Background.jpg" id="1_qbrmg"]
[ext_resource type="PackedScene" uid="uid://blkwssqojb7g" path="res://Activity1_synth/animation_activity_1.tscn" id="2_5vox5"]
[ext_resource type="Texture2D" uid="uid://dppuratph8lmk" path="res://Main_menu/particle.png" id="5_57oxm"]
[ext_resource type="Texture2D" uid="uid://beivhbkdnc76r" path="res://Animation/Main charachter/Face_normal.png" id="5_v7evm"]
[ext_resource type="Texture2D" uid="uid://b6ly637l25tah" path="res://Animation/Main charachter/Face_talk_1.png" id="6_6g8w2"]
[ext_resource type="Texture2D" uid="uid://cannm7oclrdk" path="res://Animation/Main charachter/Face_talk_2.png" id="7_i8c0g"]
[ext_resource type="Texture2D" uid="uid://cox0pwn8ry6wm" path="res://Animation/Main charachter/Face_talk_3.png" id="8_sdxhi"]
[ext_resource type="Texture2D" uid="uid://diwwgake8355a" path="res://Animation/Main charachter/Main_character_talk0.png" id="9_ggkme"]
[ext_resource type="Texture2D" uid="uid://bdoggrc2yv4nl" path="res://Animation/Main charachter/Main_character_talk1.png" id="10_lhqm4"]
[ext_resource type="Texture2D" uid="uid://cwfgcpk7nhac0" path="res://Animation/Main charachter/Main_character_talk2.png" id="11_irp8y"]
[ext_resource type="Texture2D" uid="uid://dcg1woduos7p" path="res://Animation/Main charachter/Main_character_talk3.png" id="12_c78c4"]
[ext_resource type="Texture2D" uid="uid://bt3ud4wtwwmpa" path="res://Animation/UI Animation/exclamation_button_yellow.png" id="12_hcux2"]
[ext_resource type="Texture2D" uid="uid://bo5lhvaqrqn0d" path="res://Animation/UI Animation/Synth.PNG" id="14_qh26i"]
[ext_resource type="Texture2D" uid="uid://bei6r11h32bi7" path="res://Animation/UI Animation/Custom Button Active Arrow.png" id="16_puo8b"]

[sub_resource type="Curve" id="Curve_s6hsn"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.175399, 1), 0.0, 0.0, 0, 0, Vector2(0.8041, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_yxvo2"]
curve = SubResource("Curve_s6hsn")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_lwhe2"]
lifetime_randomness = 1.0
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 10000.0
spread = 180.0
initial_velocity_min = 20.0
initial_velocity_max = 20.0
gravity = Vector3(0, 0, 0)
scale_min = 0.03
scale_max = 0.03
scale_curve = SubResource("CurveTexture_yxvo2")
color = Color(1, 1, 1, 0.364706)

[sub_resource type="SpriteFrames" id="SpriteFrames_uo2yd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_ggkme")
}, {
"duration": 1.0,
"texture": ExtResource("10_lhqm4")
}, {
"duration": 1.0,
"texture": ExtResource("11_irp8y")
}, {
"duration": 1.0,
"texture": ExtResource("12_c78c4")
}],
"loop": true,
"name": &"Character_talk",
"speed": 7.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_qtd30"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_v7evm")
}, {
"duration": 1.0,
"texture": ExtResource("6_6g8w2")
}, {
"duration": 1.0,
"texture": ExtResource("7_i8c0g")
}, {
"duration": 1.0,
"texture": ExtResource("8_sdxhi")
}],
"loop": true,
"name": &"Face_talk",
"speed": 7.0
}]

[sub_resource type="Animation" id="Animation_xts20"]
length = 0.001

[sub_resource type="Animation" id="Animation_5634q"]
resource_name = "blinking"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8t8p0"]
_data = {
"RESET": SubResource("Animation_xts20"),
"blinking": SubResource("Animation_5634q")
}

[sub_resource type="Animation" id="Animation_on8ti"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.4, 0.4)]
}

[sub_resource type="Animation" id="Animation_5p51p"]
resource_name = "popup"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0.4, 0.4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a4j2i"]
_data = {
"RESET": SubResource("Animation_on8ti"),
"popup": SubResource("Animation_5p51p")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_o5qpw"]
texture = ExtResource("16_puo8b")
modulate_color = Color(0.835294, 0.254902, 0.968627, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2nwse"]
texture = ExtResource("16_puo8b")
modulate_color = Color(0, 0.72549, 0.85098, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pmy16"]
texture = ExtResource("16_puo8b")
modulate_color = Color(0.478431, 0.270588, 1, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1yund"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8im3m"]

[node name="Animation" type="CanvasLayer"]
script = ExtResource("1_pqcsg")
scene_synth = ExtResource("2_5vox5")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_limit_end = Vector2(1750, 0)
script = ExtResource("1_cvn7a")
scrolling_speed = 50

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(2100, 0)

[node name="Background" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(1050, 305)
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_qbrmg")
flip_h = true

[node name="GPUParticles2D" type="GPUParticles2D" parent="ParallaxBackground"]
position = Vector2(585, 623)
amount = 500
process_material = SubResource("ParticleProcessMaterial_lwhe2")
texture = ExtResource("5_57oxm")

[node name="Character_talk" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(845, 303)
scale = Vector2(0.65, 0.65)
sprite_frames = SubResource("SpriteFrames_uo2yd")
animation = &"Character_talk"

[node name="First_animation" type="Node2D" parent="."]
visible = false

[node name="Timer" type="Timer" parent="First_animation"]
process_callback = 0
one_shot = true
autostart = true

[node name="Face_talk" type="AnimatedSprite2D" parent="First_animation"]
position = Vector2(823, 508)
scale = Vector2(0.12, 0.12)
sprite_frames = SubResource("SpriteFrames_qtd30")
animation = &"Face_talk"
frame_progress = 0.92641

[node name="TextureButton" type="TextureButton" parent="First_animation"]
offset_left = 602.0
offset_top = 317.0
offset_right = 2522.0
offset_bottom = 2237.0
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("12_hcux2")
texture_hover = ExtResource("12_hcux2")

[node name="Blinking" type="AnimationPlayer" parent="First_animation/TextureButton"]
libraries = {
"": SubResource("AnimationLibrary_8t8p0")
}
autoplay = "blinking"

[node name="Synth" type="TextureRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -904.0
offset_top = -509.0
offset_right = 905.0
offset_bottom = 509.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
pivot_offset = Vector2(904, 509)
texture = ExtResource("14_qh26i")

[node name="Ampliation" type="AnimationPlayer" parent="Synth"]
libraries = {
"": SubResource("AnimationLibrary_a4j2i")
}

[node name="Label" type="Label" parent="Synth"]
layout_mode = 0
offset_left = 58.3333
offset_top = -264.0
offset_right = 1867.33
offset_bottom = 9.00021
theme_override_colors/font_color = Color(0.647059, 0.00392157, 0.364706, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 200
text = " ยก O B T E N I D O !"

[node name="Go_synth" type="MarginContainer" parent="."]
visible = false
anchors_preset = 10
anchor_right = 1.0
offset_top = 575.0
offset_bottom = 648.0
grow_horizontal = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/margin_left = 1019
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 70
theme_override_constants/margin_bottom = 10

[node name="Go_synth" type="Button" parent="Go_synth"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_o5qpw")
theme_override_styles/hover = SubResource("StyleBoxTexture_2nwse")
theme_override_styles/pressed = SubResource("StyleBoxTexture_pmy16")
theme_override_styles/disabled = SubResource("StyleBoxTexture_1yund")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8im3m")

[connection signal="timeout" from="First_animation/Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="First_animation/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="Go_synth/Go_synth" to="." method="_on_go_synth_pressed"]
